--- a/Game.ipynb
+++ b/Game.ipynb
@@ -50,7 +50,7 @@
     "        self.rect = self.surf.get_rect(center = (300, 500))\n",
     "\n",
     "    def dice_roll(self):\n",
-    "        roll = random.randint(1, 2)\n",
+    "        roll = random.randint(1, 6)\n",
     "        \n",
     "        return roll\n",
     "roll = dice()\n",
@@ -58,26 +58,22 @@
     "class buy(pygame.sprite.Sprite): \n",
     "    def __init__(self):\n",
     "        super().__init__() \n",
-    "        self.surf = pygame.Surface((200, 100))\n",
-    "        self.surf.fill((0,0,0))\n",
-    "        self.rect = self.surf.get_rect(center = (300, 500))\n",
-    "\n",
-    "    def dice_roll(self):\n",
-    "        roll = random.randint(1, 2)\n",
+    "        self.surf = pygame.Surface((100, 100))\n",
+    "        self.surf.fill((0,255,0))\n",
+    "        self.rect = self.surf.get_rect(center = (300, 350))\n",
+    "        self.visible = True\n",
     "        \n",
-    "        return roll\n",
-    "\n",
     "class auction(pygame.sprite.Sprite): \n",
     "    def __init__(self):\n",
     "        super().__init__() \n",
-    "        self.surf = pygame.Surface((200, 100))\n",
-    "        self.surf.fill((0,0,0))\n",
-    "        self.rect = self.surf.get_rect(center = (300, 500))\n",
-    "\n",
-    "    def dice_roll(self):\n",
-    "        roll = random.randint(1, 2)\n",
+    "        self.surf = pygame.Surface((100, 100))\n",
+    "        self.surf.fill((255,0,0))\n",
+    "        self.rect = self.surf.get_rect(center = (500, 350))\n",
     "        \n",
-    "        return roll"
+    "\n",
+    "\n",
+    "buyButton = buy()\n",
+    "auctionButton = auction()"
    ]
   },
   {
@@ -384,7 +380,6 @@
     "        self.jailCounter = 0\n",
     "        \n",
     "        \n",
-    "        \n",
     "    def get_position(self):\n",
     "        return self.position\n",
     "    \n",
@@ -408,57 +403,112 @@
     "        property_list = [propertyName.name for propertyName in self.properties]\n",
     "        return property_list\n",
     "P1 = Player()\n",
-    "P1.surf.fill((0,0,0))\n"
+    "P1.surf.fill((0,0,0))\n",
+    "P2 = Player()\n",
+    "P2.surf.fill((0,0,255))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57d9fd1f-e8ec-4c1d-8d32-8e110fdc6226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "0435a73e-823d-47cf-baf5-b09d6302720e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "# Set up the font\n",
+    "font = pygame.font.Font(None, 36)  # You can specify the font file and size here\n",
+    "\n",
+    "# Create a text surface\n",
+    "text1 = font.render(f\"{P1.cash}\", True, (255, 40, 255))  # True enables anti-aliasing\n",
+    "text2 = font.render(f\"{P2.cash}\", True, (255, 40, 255))  # True enables anti-aliasing\n",
+    "# Get the rect object for the text surface\n",
+    "text_rect1 = text1.get_rect()\n",
+    "text_rect2 = text2.get_rect()\n",
+    "\n",
+    "# Center the text on the screen\n",
+    "text_rect1.center = (200, 200)\n",
+    "text_rect2.center = (600, 200)\n",
+    "\n",
+    "\n",
+    "gameAnnouncementText = font.render(\"temporary\", True, (0,0,0))\n",
+    "gameAnnouncement_rect = gameAnnouncementText.get_rect()\n",
+    "gameAnnouncement_rect.center = (400,400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ec2a3e0b-74b5-4637-9e4d-5e559920d522",
-   "metadata": {},
+   "execution_count": 9,
+   "id": "353a3e8d-3f9a-47b3-8e41-df839f2ce164",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pygame.surface.Surface"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(text1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5f90f228-20c8-4a54-8d8e-7a3f1e56522b",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 1]\n",
-      "['Baltic Avenue']\n",
-      "[2, 2]\n",
+      "[6, 3]\n",
+      "['Connecticut Avenue']\n",
+      "[4, 3]\n",
+      "[]\n",
+      "[5, 2]\n",
+      "['Connecticut Avenue', 'St. James Place']\n",
+      "[1, 4]\n",
+      "[]\n",
+      "[6, 3]\n",
+      "['Connecticut Avenue', 'St. James Place', 'B&O Railroad']\n",
+      "[2, 5]\n",
+      "['New York Avenue']\n",
+      "[6, 6]\n",
       "doubles!\n",
-      "['Baltic Avenue']\n",
-      "[2, 2]\n",
-      "doubles!\n",
-      "['Baltic Avenue', 'St. Charles Place']\n",
-      "[2, 1]\n",
-      "['Baltic Avenue', 'St. Charles Place', 'Virginia Avenue']\n",
-      "[2, 1]\n",
-      "['Baltic Avenue', 'St. Charles Place', 'Virginia Avenue']\n",
-      "[2, 2]\n",
-      "doubles!\n",
-      "['Baltic Avenue', 'St. Charles Place', 'Virginia Avenue', 'Kentucky Avenue']\n"
+      "['Connecticut Avenue', 'St. James Place', 'B&O Railroad', 'Park Place']\n",
+      "[3, 1]\n",
+      "['Connecticut Avenue', 'St. James Place', 'B&O Railroad', 'Park Place', 'Mediterranean Avenue']\n"
      ]
     },
     {
      "ename": "error",
-     "evalue": "video system not initialized",
+     "evalue": "display Surface quit",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m#mouse coords\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m mousePos \u001b[38;5;241m=\u001b[39m \u001b[43mpygame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmouse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_pos\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;66;03m#if hit button\u001b[39;00m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;241m200\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m mousePos[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m400\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;241m450\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m mousePos[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m550\u001b[39m: \n",
-      "\u001b[1;31merror\u001b[0m: video system not initialized"
+      "Cell \u001b[1;32mIn[10], line 99\u001b[0m\n\u001b[0;32m     97\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;66;03m#add money  info   \u001b[39;00m\n\u001b[1;32m---> 99\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    100\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(text2, text_rect2)\n\u001b[0;32m    102\u001b[0m \u001b[38;5;66;03m#mouse coords\u001b[39;00m\n",
+      "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
    ],
@@ -467,8 +517,9 @@
     "\n",
     "all_sprites.add(roll)\n",
     "all_sprites.add(P1)\n",
-    "\n",
+    "all_sprites.add(P2)\n",
     "clicked = False\n",
+    "actionChosen = False\n",
     "\n",
     "def playerTurn(player, rolls):\n",
     "    all_sprites.remove(roll)\n",
@@ -479,13 +530,16 @@
     "            player.injail = False\n",
     "            #implement player lose 50$\n",
     "    else:\n",
+    "        #if doubles\n",
     "        if rolls[0] == rolls[1]:\n",
     "            player.doublesCounter += 1\n",
     "            print(\"doubles!\")\n",
     "            player.rolledDoubles = True\n",
+    "        #if not doubles\n",
     "        else:\n",
     "            player.rolledDoubles = False\n",
     "            player.doublesCounter = 0\n",
+    "        #if 3 consecutive doubles\n",
     "        if player.doublesCounter >= 3:\n",
     "            player.move(player.position_to_coordinates(11))\n",
     "            player.position = 11\n",
@@ -493,17 +547,65 @@
     "            player.jailCounter = 3\n",
     "            player.rolledDoubles = False\n",
     "            player.doublesCounter = 0\n",
+    "        #if not 3 consecutive doubles\n",
     "        else:\n",
     "            roll_sum = sum(rolls)\n",
     "            player.add_position(roll_sum)\n",
     "            player.move(player.position_to_coordinates(player.position))\n",
+    "            #if landed in a property/railroad space(later to add utilties)\n",
     "            if player.position in property_positions:\n",
-    "                player.properties.append(property_objects[player.position])\n",
-    "\n",
+    "                actionChosen = True\n",
+    "                #show auction/buy buttons\n",
+    "                all_sprites.add(auctionButton)\n",
+    "                all_sprites.add(buyButton)\n",
+    "                #display new button sprites\n",
+    "                for entity in all_sprites:\n",
+    "                    window.blit(entity.surf, entity.rect)\n",
+    "                pygame.display.update()\n",
+    "                #wait till either buy or auction is chosen\n",
+    "                clickedAction = False\n",
+    "                while actionChosen:\n",
+    "                    mousePos = pygame.mouse.get_pos()\n",
+    "                    event = pygame.event.wait()\n",
+    "                    #if the x button is hit, quit\n",
+    "                    if event.type == pygame.QUIT:\n",
+    "                        pygame.quit()\n",
+    "                    #if buy button is hit\n",
+    "                    if 250 <= mousePos[0] <= 350 and 300 <= mousePos[1] <= 400: \n",
+    "                        if pygame.mouse.get_pressed()[0] == True:\n",
+    "                            clickedAction = True\n",
+    "                        if clickedAction:\n",
+    "                            if pygame.mouse.get_pressed()[0] == False:\n",
+    "                                clickedAction = False\n",
+    "                                actionChosen = False\n",
+    "                                #remove button sprites\n",
+    "                                all_sprites.remove(auctionButton)\n",
+    "                                all_sprites.remove(buyButton)\n",
+    "                                #add property and subtract cash \n",
+    "                                ####\n",
+    "                                ####\n",
+    "                                #### DOES NOT WORK IDK WHY\n",
+    "                                ####\n",
+    "                                player.cash -= property_objects[player.position].cost\n",
+    "                                text1 = font.render(f\"{player.cash}\", True, (255, 40, 255)) # Does not update text1 for some reason i dont know why\n",
+    "                                player.properties.append(property_objects[player.position])\n",
+    "                                property_objects.pop(player.position)\n",
+    "                    #if auction button is hit(do nothing for now) \n",
+    "                    if 500 <= mousePos[0] <= 600 and 300 <= mousePos[1] <= 400: \n",
+    "                        if pygame.mouse.get_pressed()[0] == True:\n",
+    "                               clickedAction = True\n",
+    "                        if clickedAction:\n",
+    "                            if pygame.mouse.get_pressed()[0] == False:\n",
+    "                                clickedAction = False\n",
+    "                                actionChosen = False\n",
+    "                                all_sprites.remove(auctionButton)\n",
+    "                                all_sprites.remove(buyButton)\n",
+    "                \n",
+    "                \n",
     "    all_sprites.add(roll)\n",
     "\n",
-    "\n",
-    "players = [P1]\n",
+    "#list of all player objects\n",
+    "players = [P1,P2]\n",
     "playerCount = len(players)\n",
     "turnCounter = 0;\n",
     "while True:\n",
@@ -512,7 +614,10 @@
     "        if event.type == QUIT:\n",
     "            pygame.quit()\n",
     "            break\n",
-    "            \n",
+    "    #add money info   \n",
+    "    window.blit(text1, text_rect1)\n",
+    "    window.blit(text2, text_rect2)\n",
+    "    \n",
     "    #mouse coords\n",
     "    mousePos = pygame.mouse.get_pos()\n",
     "    \n",
@@ -521,10 +626,14 @@
     "        if pygame.mouse.get_pressed()[0] == True:\n",
     "            clicked = True\n",
     "        if clicked:\n",
+    "            #if released button, do action\n",
     "            if pygame.mouse.get_pressed()[0] == False:\n",
     "                clicked = False\n",
+    "                #roll twice\n",
     "                rolls = [roll.dice_roll(), roll.dice_roll()]  \n",
     "                print (rolls)\n",
+    "                #turn counter for keeping track of whose turn it is\n",
+    "                #playerTurn = turn action function\n",
     "                playerTurn(players[turnCounter], rolls)\n",
     "                print(players[turnCounter].list_properties())\n",
     "                if players[turnCounter].rolledDoubles:\n",
@@ -534,30 +643,11 @@
     "                if turnCounter >= playerCount:\n",
     "                    turnCounter = 0\n",
     "                \n",
-    "    \n",
+    "    #display sprites\n",
     "    for entity in all_sprites:\n",
     "        window.blit(entity.surf, entity.rect)\n",
     " \n",
     "    pygame.display.update()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57d9fd1f-e8ec-4c1d-8d32-8e110fdc6226",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Player(pygame.sprite.Sprite):\n",
-    "    def __init__(self):\n",
-    "        super().__init__() \n",
-    "        self.surf = pygame.Surface((30, 30))\n",
-    "        self.surf.fill((128,255,40))\n",
-    "        self.rect = self.surf.get_rect()\n",
-    "   \n",
-    "        self.pos = vec((10, 385))\n",
-    "        self.vel = vec(0,0)\n",
-    "        self.acc = vec(0,0)"
    ]
   },
   {
