--- a/Game.ipynb
+++ b/Game.ipynb
@@ -95,12 +95,14 @@
     "        return self.position\n",
     "        \n",
     "class Property(Space):\n",
-    "    def __init__(self, color, cost, *args, **kwargs):\n",
+    "    def __init__(self, color, cost, rent_costs, *args, **kwargs):\n",
     "        \n",
     "        self.color = color\n",
     "        self.cost = cost\n",
     "        \n",
-    "        self.house_hotel_count = 0\n",
+    "        self.rent_costs = rent_costs\n",
+    "        self.house_count = 0\n",
+    "        self.hotel_count = 0\n",
     "        \n",
     "        super().__init__(*args, **kwargs)\n",
     "        \n",
@@ -118,13 +120,15 @@
     "    \n",
     "    def get_status():\n",
     "        return self.mortgaged\n",
-    "\n",
     "    \n",
-    "    def get_house_hotels():\n",
-    "        return self.house_hotel_count\n",
+    "    def get_houses():\n",
+    "        return self.house_count\n",
+    "    \n",
+    "    def get_hotels():\n",
+    "        return self.hotel_count\n",
     "\n",
     "    def get_rent_cost():\n",
-    "        return rent_costs[self.get_house_hotels()]\n",
+    "        return rent_costs[self.get_houses() + (5 * self.get_hotels())]\n",
     "        \n",
     "        \n",
     "        \n",
@@ -186,28 +190,28 @@
    },
    "outputs": [],
    "source": [
-    "mediterranean_avenue = Property(\"Brown\", 60, \"Mediterranean Avenue\", 2)\n",
-    "baltic_avenue = Property(\"Brown\", 60, \"Baltic Avenue\", 4)\n",
-    "oriental_avenue = Property(\"Light Blue\", 100, \"Oriental Avenue\", 7)\n",
-    "vermont_avenue = Property(\"Light Blue\", 100, \"Vermont Avenue\", 9)\n",
-    "connecticut_avenue = Property(\"Light Blue\", 120, \"Connecticut Avenue\", 10)\n",
-    "st_charles_place = Property(\"Purple\", 140, \"St. Charles Place\", 12)\n",
-    "states_avenue = Property(\"Purple\", 140, \"States Avenue\", 14)\n",
-    "virginia_avenue = Property(\"Purple\", 160, \"Virginia Avenue\", 15)\n",
-    "st_james_place = Property(\"Orange\", 180, \"St. James Place\", 17)\n",
-    "tennessee_avenue = Property(\"Orange\", 180, \"Tennessee Avenue\", 19)\n",
-    "new_york_avenue = Property(\"Orange\", 200, \"New York Avenue\", 20)\n",
-    "kentucky_avenue = Property(\"Red\", 220, \"Kentucky Avenue\", 22)\n",
-    "indiana_avenue = Property(\"Red\", 220, \"Indiana Avenue\", 24)\n",
-    "illinois_avenue = Property(\"Red\", 240, \"Illinois Avenue\", 25)\n",
-    "atlantic_avenue = Property(\"Yellow\", 260, \"Atlantic Avenue\", 27)\n",
-    "ventnor_avenue = Property(\"Yellow\", 260, \"Ventnor Avenue\", 28)\n",
-    "marvin_gardens = Property(\"Yellow\", 280, \"Marvin Gardens\", 30)\n",
-    "pacific_avenue = Property(\"Green\", 300, \"Pacific Avenue\", 32)\n",
-    "north_carolina_avenue = Property(\"Green\", 300, \"North Carolina Avenue\", 33)\n",
-    "pennsylvania_avenue = Property(\"Green\", 320, \"Pennsylvania Avenue\", 35)\n",
-    "park_place = Property(\"Blue\", 350, \"Park Place\", 38)\n",
-    "boardwalk = Property(\"Blue\", 400, \"Boardwalk\", 40)\n",
+    "mediterranean_avenue = Property(\"Brown\", 60, [2, 10, 30, 90, 160, 250], \"Mediterranean Avenue\", 2)\n",
+    "baltic_avenue = Property(\"Brown\", 60, [4, 20, 60, 180, 320, 450], \"Baltic Avenue\", 4)\n",
+    "oriental_avenue = Property(\"Light Blue\", 100, [6, 30, 90, 270, 400, 550], \"Oriental Avenue\", 7)\n",
+    "vermont_avenue = Property(\"Light Blue\", 100, [8, 40, 100, 300, 450, 600], \"Vermont Avenue\", 9)\n",
+    "connecticut_avenue = Property(\"Light Blue\", 120, [6, 30, 90, 270, 400, 550], \"Connecticut Avenue\", 10)\n",
+    "st_charles_place = Property(\"Purple\", 140, [10, 50, 150, 450, 625, 750], \"St. Charles Place\", 12)\n",
+    "states_avenue = Property(\"Purple\", 140, [10, 50, 150, 450, 625, 750], \"States Avenue\", 14)\n",
+    "virginia_avenue = Property(\"Purple\", 160, [12, 60, 180, 500, 700, 900], \"Virginia Avenue\", 15)\n",
+    "st_james_place = Property(\"Orange\", 180, [14, 70, 200, 550, 750, 950], \"St. James Place\", 17)\n",
+    "tennessee_avenue = Property(\"Orange\", 180, [14, 70, 200, 550, 750, 950], \"Tennessee Avenue\", 19)\n",
+    "new_york_avenue = Property(\"Orange\", 200, [16, 80, 220, 600, 800, 1000], \"New York Avenue\", 20)\n",
+    "kentucky_avenue = Property(\"Red\", 220, [18, 90, 250, 700, 875, 1050], \"Kentucky Avenue\", 22)\n",
+    "indiana_avenue = Property(\"Red\", 220, [18, 90, 250, 700, 875, 1050], \"Indiana Avenue\", 24)\n",
+    "illinois_avenue = Property(\"Red\", 240, [20, 100, 300, 750, 925, 1100], \"Illinois Avenue\", 25)\n",
+    "atlantic_avenue = Property(\"Yellow\", 260, [22, 110, 330, 800, 975, 1150], \"Atlantic Avenue\", 27)\n",
+    "ventnor_avenue = Property(\"Yellow\", 260, [22, 110, 330, 800, 975, 1150], \"Ventnor Avenue\", 28)\n",
+    "marvin_gardens = Property(\"Yellow\", 280, [24, 120, 360, 850, 1025, 1200], \"Marvin Gardens\", 30)\n",
+    "pacific_avenue = Property(\"Green\", 300, [26, 130, 390, 900, 1100, 1275], \"Pacific Avenue\", 32)\n",
+    "north_carolina_avenue = Property(\"Green\", 300, [26, 130, 390, 900, 1100, 1275], \"North Carolina Avenue\", 33)\n",
+    "pennsylvania_avenue = Property(\"Green\", 320, [28, 150, 450, 1000, 1200, 1400], \"Pennsylvania Avenue\", 35)\n",
+    "park_place = Property(\"Blue\", 350, [35, 175, 500, 1100, 1300, 1500], \"Park Place\", 38)\n",
+    "boardwalk = Property(\"Blue\", 400, [50, 200, 600, 1400, 1700, 2000], \"Boardwalk\", 40)\n",
     "\n",
     "reading_railroad = Railroad(200, \"Reading Railroad\", 6)\n",
     "pennsylvania_railroad = Railroad(200, \"Pennsylvania Railroad\", 16)\n",
@@ -221,7 +225,46 @@
    "id": "791c454b-f293-448a-b39e-6f3d13c404a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chance_cards = [\"Advance to Go (Collect $200)\", \n",
+    "                \"Advance to Illinois Avenue. If you pass Go, collect $200\", \n",
+    "                \"Advance to St. Charles Place. If you pass Go, collect $200\", \n",
+    "                \"Advance token to nearest Utility. If unowned, you may buy it from the Bank. If owned, throw dice and pay owner a total ten times amount thrown.\", \n",
+    "                \"Advance to the nearest Railroad. If unowned, you may buy it from the Bank. If owned, pay wonder twice the rental to which they are otherwise entitled\", \n",
+    "                \"Advance to the nearest Railroad. If unowned, you may buy it from the Bank. If owned, pay wonder twice the rental to which they are otherwise entitled\", \n",
+    "                \"Bank pays you dividend of $50\", \n",
+    "                \"Get Out of Jail Free\", \n",
+    "                \"Go Back 3 Spaces\", \n",
+    "                \"Go to Jail. Go directly to Jail, do not pass Go, do not collect $200\", \n",
+    "                \"Make general repairs on all your property. For each house pay $25. For each hotel pay $100\", \n",
+    "                \"Speeding fine $15\", \n",
+    "                \"Take a trip to Reading Railroad. If you pass Go, collect $200\", \n",
+    "                \"Advance to Boardwalk\", \n",
+    "                \"You have been elected Chairman of the Board. Pay each player $50\", \n",
+    "                \"Your building loan matures. Collect $150\"\n",
+    "               ]\n",
+    "\n",
+    "community_chest_cards = [\"Advance to Go (Collect $200)\", \n",
+    "                         \"Bank error in your favor. Collect $200\", \n",
+    "                         \"Doctor’s fee. Pay $50\", \n",
+    "                         \"From sale of stock you get $50\", \n",
+    "                         \"Get Out of Jail Free\", \n",
+    "                         \"Go to Jail. Go directly to jail, do not pass Go, do not collect $200\", \n",
+    "                         \"Holiday fund matures. Receive $100\", \n",
+    "                         \"Income tax refund. Collect $20\", \n",
+    "                         \"It is your birthday. Collect $10 from every player\", \n",
+    "                         \"Life insurance matures. Collect $100\", \n",
+    "                         \"Pay hospital fees of $100\", \n",
+    "                         \"Pay school fees of $50\", \n",
+    "                         \"Receive $25 consultancy fee\", \n",
+    "                         \"You are assessed for street repair. $40 per house. $115 per hotel\", \n",
+    "                         \"You have won second prize in a beauty contest. Collect $10\", \n",
+    "                         \"You inherit $100\"\n",
+    "                        ]\n",
+    "\n",
+    "random.shuffle(chance_cards)\n",
+    "random.shuffle(community_chest_cards)"
+   ]
   },
   {
    "cell_type": "code",
@@ -260,7 +303,10 @@
     "    26: b_o_railroad,\n",
     "    36: short_line_railroad,\n",
     "}\n",
-    "property_positions = list(property_objects.keys())"
+    "property_positions = list(property_objects.keys())\n",
+    "\n",
+    "chance_positions = [8, 23, 27]\n",
+    "community_chest_positions = [3, 18, 34]"
    ]
   },
   {
@@ -539,10 +585,10 @@
     "        else:\n",
     "            player.rolledDoubles = False\n",
     "            player.doublesCounter = 0\n",
-    "        #if 3 consecutive doubles\n",
-    "        if player.doublesCounter >= 3:\n",
-    "            player.move(player.position_to_coordinates(11))\n",
+    "        #if 3 consecutive doubles or if lands on Go to Jail\n",
+    "        if player.doublesCounter >= 3 or player.position == 31:\n",
     "            player.position = 11\n",
+    "            player.move(player.position_to_coordinates(player.position))\n",
     "            player.injail = True\n",
     "            player.jailCounter = 3\n",
     "            player.rolledDoubles = False\n",
@@ -552,6 +598,128 @@
     "            roll_sum = sum(rolls)\n",
     "            player.add_position(roll_sum)\n",
     "            player.move(player.position_to_coordinates(player.position))\n",
+    "            \n",
+    "            # community chest cards                    \n",
+    "            if player.position in community_chest_positions:\n",
+    "                # get card action, move card to the back of the list\n",
+    "                action = community_chest_cards[0]\n",
+    "                community_chest_cards.append(action)\n",
+    "                community_chest_cards.pop(0)\n",
+    "                \n",
+    "                # custom responses to each card\n",
+    "                if action == \"Advance to Go (Collect $200)\":\n",
+    "                    player.position = 1\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                elif action == \"Bank error in your favor. Collect $200\":\n",
+    "                    player.cash += 200\n",
+    "                elif action == \"Doctor’s fee. Pay $50\":\n",
+    "                    player.cash -= 50\n",
+    "                elif action == \"From sale of stock you get $50\":\n",
+    "                    player.cash += 50\n",
+    "                elif action == \"Get Out of Jail Free\":\n",
+    "                    player.getoutofjailfree += 1\n",
+    "                elif action == \"Go to Jail. Go directly to Jail, do not pass Go, do not collect $200\":\n",
+    "                    player.position = 11\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                    player.injail = True\n",
+    "                    player.jailCounter = 3\n",
+    "                    player.rolledDoubles = False\n",
+    "                    player.doublesCounter = 0\n",
+    "                elif action == \"Holiday fund matures. Receive $100\":\n",
+    "                    player.cash += 100\n",
+    "                elif action == \"Income tax refund. Collect $20\":\n",
+    "                    player.cash += 100\n",
+    "                elif action == \"It is your birthday. Collect $10 from every player\":\n",
+    "                    player.cash += 10\n",
+    "                    # not sure how to remove $10 from other players\n",
+    "                    # will also need to change +=10 to be based on 10*# of other players eventually\n",
+    "                elif action == \"Life insurance matures. Collect $100\":\n",
+    "                    player.cash += 100\n",
+    "                elif action == \"Pay hospital fees of $100\":\n",
+    "                    player.cash -= 100\n",
+    "                elif action == \"Pay school fees of $50\":\n",
+    "                    player.cash -= 50\n",
+    "                elif action == \"Receive $25 consultancy fee\":\n",
+    "                    player.cash += 25\n",
+    "                elif action == \"You are assessed for street repair. $40 per house. $115 per hotel\":\n",
+    "                    player.cash -= (40 * player.house_count) + (125 * player.hotel_count)\n",
+    "                elif action == \"You have won second prize in a beauty contest. Collect $10\":\n",
+    "                    player.cash += 10\n",
+    "                elif action == \"You inherit $100\":\n",
+    "                    player.cash += 100\n",
+    "            \n",
+    "            # chance cards                    \n",
+    "            if player.position in chance_positions:\n",
+    "                # get card action, move card to the back of the list\n",
+    "                action = chance_cards[0]\n",
+    "                chance_cards.append(action)\n",
+    "                chance_cards.pop(0)\n",
+    "                \n",
+    "                # custom responses to each card\n",
+    "                if action == \"Advance to Go (Collect $200)\":\n",
+    "                    player.position = 1\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                elif action == \"Advance to Illinois Avenue. If you pass Go, collect $200\":\n",
+    "                    if player.position == 37:\n",
+    "                        player.cash += 200\n",
+    "                    player.position == 25\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                elif action == \"Advance to St. Charles Place. If you pass Go, collect $200\":\n",
+    "                    if player.position in [23, 37]:\n",
+    "                        player.cash += 200\n",
+    "                    player.position == 12\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                elif action == \"Advance token to nearest Utility. If unowned, you may buy it from the Bank. If owned, throw dice and pay owner a total ten times amount thrown.\":\n",
+    "                    if player.position == 8:\n",
+    "                        player.position == 13\n",
+    "                        player.move(player.position_to_coordinates(player.position))\n",
+    "                    elif player.position == 23:\n",
+    "                        player.position == 29\n",
+    "                        player.move(player.position_to_coordinates(player.position))\n",
+    "                    elif player.position == 37:\n",
+    "                        player.position == 13\n",
+    "                        player.move(player.position_to_coordinates(player.position))\n",
+    "                        player.cash += 200\n",
+    "                elif action == \"Advance to the nearest Railroad. If unowned, you may buy it from the Bank. If owned, pay wonder twice the rental to which they are otherwise entitled\":\n",
+    "                    if player.position == 8:\n",
+    "                        player.position == 16\n",
+    "                        player.move(player.position_to_coordinates(player.position))\n",
+    "                    elif player.position == 23:\n",
+    "                        player.position == 26\n",
+    "                        player.move(player.position_to_coordinates(player.position))\n",
+    "                    elif player.position == 37:\n",
+    "                        player.position == 6\n",
+    "                        player.move(player.position_to_coordinates(player.position))\n",
+    "                        player.cash += 200\n",
+    "                elif action == \"Bank pays you dividend of $50\":\n",
+    "                    player.cash += 50\n",
+    "                elif action == \"Get Out of Jail Free\":\n",
+    "                    player.getoutofjailfree += 1\n",
+    "                elif action == \"Go Back 3 Spaces\":\n",
+    "                    player.position -= 3\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                elif action == \"Go to Jail. Go directly to Jail, do not pass Go, do not collect $200\":\n",
+    "                    player.position = 11\n",
+    "                    player.move(player.position_to_coordinates(player.position))\n",
+    "                    player.injail = True\n",
+    "                    player.jailCounter = 3\n",
+    "                    player.rolledDoubles = False\n",
+    "                    player.doublesCounter = 0\n",
+    "                elif action == \"Make general repairs on all your property. For each house pay $25. For each hotel pay $100\":\n",
+    "                    player.cash -= (25 * player.house_count) + (100 * player.hotel_count)\n",
+    "                elif action == \"Speeding fine $15\":\n",
+    "                    player.cash -= 15\n",
+    "                elif action == \"Take a trip to Reading Railroad. If you pass Go, collect $200\":\n",
+    "                    player.position == 6\n",
+    "                    player.cash += 200\n",
+    "                elif action == \"Advance to Boardwalk\":\n",
+    "                    player.position == 40\n",
+    "                elif action == \"You have been elected Chairman of the Board. Pay each player $50\":\n",
+    "                    player.cash -= 50\n",
+    "                    # not sure how to do take $50 from the other players\n",
+    "                elif action == \"Your building loan matures. Collect $150\":\n",
+    "                    player.cash += 150\n",
+    "            \n",
     "            #if landed in a property/railroad space(later to add utilties)\n",
     "            if player.position in property_positions:\n",
     "                actionChosen = True\n",
@@ -600,6 +768,7 @@
     "                                actionChosen = False\n",
     "                                all_sprites.remove(auctionButton)\n",
     "                                all_sprites.remove(buyButton)\n",
+    "            \n",
     "                \n",
     "                \n",
     "    all_sprites.add(roll)\n",
