--- a/Game.ipynb
+++ b/Game.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "791c454b-f293-448a-b39e-6f3d13c404a4",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "aab42f38-057e-4380-b9c0-3f8812ede481",
    "metadata": {
     "tags": []
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4b8758d5-555b-4a2c-8f5c-fe8a84fd89b5",
    "metadata": {
     "tags": []
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9da4a4a3-0d84-4d1d-bf0f-a4ba3d09c964",
    "metadata": {
     "tags": []
@@ -393,7 +393,7 @@
        "<rect(0, 0, 20, 20)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
     "        self.vel = vec(0,0)\n",
     "        self.acc = vec(0,0)\n",
     "        \n",
-    "        \n",
+    "        self.playerNumber = 0\n",
     "        self.cash = 1500\n",
     "        self.position = 1\n",
     "        self.properties = []\n",
@@ -449,8 +449,10 @@
     "        property_list = [propertyName.name for propertyName in self.properties]\n",
     "        return property_list\n",
     "P1 = Player()\n",
+    "P1.playerNumber = 1\n",
     "P1.surf.fill((0,0,0))\n",
     "P2 = Player()\n",
+    "P2.playerNumber = 2\n",
     "P2.surf.fill((0,0,255))"
    ]
   },
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0435a73e-823d-47cf-baf5-b09d6302720e",
    "metadata": {
     "tags": []
@@ -476,44 +478,31 @@
     "font = pygame.font.Font(None, 36)  # You can specify the font file and size here\n",
     "\n",
     "# Create a text surface\n",
-    "text1 = font.render(f\"{P1.cash}\", True, (255, 40, 255))  # True enables anti-aliasing\n",
-    "text2 = font.render(f\"{P2.cash}\", True, (255, 40, 255))  # True enables anti-aliasing\n",
+    "moneyText1 = font.render(f\"${P1.cash}\", True, (0, 0, 0))  # True enables anti-aliasing\n",
+    "moneyText2 = font.render(f\"${P2.cash}\", True, (0, 0, 0))  # True enables anti-aliasing\n",
     "# Get the rect object for the text surface\n",
-    "text_rect1 = text1.get_rect()\n",
-    "text_rect2 = text2.get_rect()\n",
+    "text_rect1 = moneyText1.get_rect()\n",
+    "text_rect2 = moneyText2.get_rect()\n",
     "\n",
     "# Center the text on the screen\n",
     "text_rect1.center = (200, 200)\n",
     "text_rect2.center = (600, 200)\n",
     "\n",
     "\n",
-    "gameAnnouncementText = font.render(\"temporary\", True, (0,0,0))\n",
+    "gameAnnouncementText = font.render(\"    \", True, (0,0,0))\n",
     "gameAnnouncement_rect = gameAnnouncementText.get_rect()\n",
-    "gameAnnouncement_rect.center = (400,400)"
+    "gameAnnouncement_rect.center = (400,425)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "353a3e8d-3f9a-47b3-8e41-df839f2ce164",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pygame.surface.Surface"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(text1)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -527,23 +516,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 3]\n",
+      "[1, 3]\n",
+      "[]\n",
+      "[3, 6]\n",
       "['Connecticut Avenue']\n",
-      "[4, 3]\n",
+      "[3, 2]\n",
       "[]\n",
-      "[5, 2]\n",
-      "['Connecticut Avenue', 'St. James Place']\n",
-      "[1, 4]\n",
-      "[]\n",
-      "[6, 3]\n",
-      "['Connecticut Avenue', 'St. James Place', 'B&O Railroad']\n",
-      "[2, 5]\n",
+      "[1, 3]\n",
+      "['Connecticut Avenue', 'States Avenue']\n",
+      "[5, 5]\n",
       "['New York Avenue']\n",
-      "[6, 6]\n",
-      "doubles!\n",
-      "['Connecticut Avenue', 'St. James Place', 'B&O Railroad', 'Park Place']\n",
-      "[3, 1]\n",
-      "['Connecticut Avenue', 'St. James Place', 'B&O Railroad', 'Park Place', 'Mediterranean Avenue']\n"
+      "[3, 2]\n",
+      "['New York Avenue', 'Illinois Avenue']\n",
+      "[6, 3]\n",
+      "['Connecticut Avenue', 'States Avenue']\n",
+      "[5, 3]\n",
+      "['New York Avenue', 'Illinois Avenue', 'North Carolina Avenue']\n"
      ]
     },
     {
@@ -553,7 +541,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 99\u001b[0m\n\u001b[0;32m     97\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;66;03m#add money  info   \u001b[39;00m\n\u001b[1;32m---> 99\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    100\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(text2, text_rect2)\n\u001b[0;32m    102\u001b[0m \u001b[38;5;66;03m#mouse coords\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[10], line 251\u001b[0m\n\u001b[0;32m    248\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    249\u001b[0m \u001b[38;5;66;03m#add money info   \u001b[39;00m\n\u001b[1;32m--> 251\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmoneyText1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    252\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(moneyText2, text_rect2)\n\u001b[0;32m    253\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(gameAnnouncementText, gameAnnouncement_rect)\n",
       "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
@@ -568,18 +556,26 @@
     "actionChosen = False\n",
     "\n",
     "def playerTurn(player, rolls):\n",
+    "    global moneyText1\n",
+    "    global moneyText2\n",
+    "    global gameAnnouncementText\n",
+    "    global gameAnnouncement_rect\n",
     "    all_sprites.remove(roll)\n",
     "    if player.injail:\n",
     "        player.jailCounter -= 1\n",
-    "        print(\"in jail\")\n",
+    "        gameAnnouncementText = font.render(f\"player {player.playerNumber} is in jail!\", True, (0,0,0))\n",
+    "        gameAnnouncement_rect = gameAnnouncementText.get_rect()\n",
+    "        gameAnnouncement_rect.center = (400,425)\n",
     "        if player.jailCounter == 1:\n",
     "            player.injail = False\n",
-    "            #implement player lose 50$\n",
+    "            player.cash -= 50\n",
     "    else:\n",
     "        #if doubles\n",
     "        if rolls[0] == rolls[1]:\n",
     "            player.doublesCounter += 1\n",
-    "            print(\"doubles!\")\n",
+    "            gameAnnouncementText = font.render(f\"player {player.playerNumber} rolled doubles!\", True, (0,0,0))\n",
+    "            gameAnnouncement_rect = gameAnnouncementText.get_rect()\n",
+    "            gameAnnouncement_rect.center = (400,425)\n",
     "            player.rolledDoubles = True\n",
     "        #if not doubles\n",
     "        else:\n",
@@ -630,7 +626,10 @@
     "                elif action == \"Income tax refund. Collect $20\":\n",
     "                    player.cash += 100\n",
     "                elif action == \"It is your birthday. Collect $10 from every player\":\n",
-    "                    player.cash += 10\n",
+    "                    player.cash += ((playerCount - 1) * 10)\n",
+    "                    for p in range(1, playerCount):\n",
+    "                        if p != player.playerNumber:\n",
+    "                            players[p - 1].cash -= 10\n",
     "                    # not sure how to remove $10 from other players\n",
     "                    # will also need to change +=10 to be based on 10*# of other players eventually\n",
     "                elif action == \"Life insurance matures. Collect $100\":\n",
@@ -642,7 +641,12 @@
     "                elif action == \"Receive $25 consultancy fee\":\n",
     "                    player.cash += 25\n",
     "                elif action == \"You are assessed for street repair. $40 per house. $115 per hotel\":\n",
-    "                    player.cash -= (40 * player.house_count) + (125 * player.hotel_count)\n",
+    "                    totalHouses = 0\n",
+    "                    totalHotels = 0\n",
+    "                    for p in player.properties:\n",
+    "                        totalHouses += p.house_count\n",
+    "                        totalHotels += p.hotel_count\n",
+    "                    player.cash -= (40 * totalHouses) + (125 * totalHotels)\n",
     "                elif action == \"You have won second prize in a beauty contest. Collect $10\":\n",
     "                    player.cash += 10\n",
     "                elif action == \"You inherit $100\":\n",
@@ -706,7 +710,12 @@
     "                    player.rolledDoubles = False\n",
     "                    player.doublesCounter = 0\n",
     "                elif action == \"Make general repairs on all your property. For each house pay $25. For each hotel pay $100\":\n",
-    "                    player.cash -= (25 * player.house_count) + (100 * player.hotel_count)\n",
+    "                    totalHouses = 0\n",
+    "                    totalHotels = 0\n",
+    "                    for p in player.properties:\n",
+    "                        totalHouses += p.house_count\n",
+    "                        totalHotels += p.hotel_count\n",
+    "                    player.cash -= (25 * totalHouses) + (100 * totalHotels)\n",
     "                elif action == \"Speeding fine $15\":\n",
     "                    player.cash -= 15\n",
     "                elif action == \"Take a trip to Reading Railroad. If you pass Go, collect $200\":\n",
@@ -715,13 +724,16 @@
     "                elif action == \"Advance to Boardwalk\":\n",
     "                    player.position == 40\n",
     "                elif action == \"You have been elected Chairman of the Board. Pay each player $50\":\n",
-    "                    player.cash -= 50\n",
+    "                    player.cash -= (50 * (playerCount - 1))\n",
+    "                    for p in range(1, playerCount):\n",
+    "                        if p != player.playerNumber:\n",
+    "                            players[p - 1].cash -= 10\n",
     "                    # not sure how to do take $50 from the other players\n",
     "                elif action == \"Your building loan matures. Collect $150\":\n",
     "                    player.cash += 150\n",
     "            \n",
     "            #if landed in a property/railroad space(later to add utilties)\n",
-    "            if player.position in property_positions:\n",
+    "            if player.position in property_objects:\n",
     "                actionChosen = True\n",
     "                #show auction/buy buttons\n",
     "                all_sprites.add(auctionButton)\n",
@@ -749,13 +761,12 @@
     "                                #remove button sprites\n",
     "                                all_sprites.remove(auctionButton)\n",
     "                                all_sprites.remove(buyButton)\n",
-    "                                #add property and subtract cash \n",
-    "                                ####\n",
-    "                                ####\n",
-    "                                #### DOES NOT WORK IDK WHY\n",
-    "                                ####\n",
+    "\n",
     "                                player.cash -= property_objects[player.position].cost\n",
-    "                                text1 = font.render(f\"{player.cash}\", True, (255, 40, 255)) # Does not update text1 for some reason i dont know why\n",
+    "                                if player.playerNumber == 1:    \n",
+    "                                    moneyText1 = font.render(f\"${player.cash}\", True, (0, 0, 0))\n",
+    "                                elif player.playerNumber == 2:\n",
+    "                                    moneyText2 = font.render(f\"${player.cash}\", True, (0, 0, 0))\n",
     "                                player.properties.append(property_objects[player.position])\n",
     "                                property_objects.pop(player.position)\n",
     "                    #if auction button is hit(do nothing for now) \n",
@@ -766,6 +777,7 @@
     "                            if pygame.mouse.get_pressed()[0] == False:\n",
     "                                clickedAction = False\n",
     "                                actionChosen = False\n",
+    "                                #remove button sprites\n",
     "                                all_sprites.remove(auctionButton)\n",
     "                                all_sprites.remove(buyButton)\n",
     "            \n",
@@ -784,9 +796,10 @@
     "            pygame.quit()\n",
     "            break\n",
     "    #add money info   \n",
-    "    window.blit(text1, text_rect1)\n",
-    "    window.blit(text2, text_rect2)\n",
-    "    \n",
+    "\n",
+    "    window.blit(moneyText1, text_rect1)\n",
+    "    window.blit(moneyText2, text_rect2)\n",
+    "    window.blit(gameAnnouncementText, gameAnnouncement_rect)\n",
     "    #mouse coords\n",
     "    mousePos = pygame.mouse.get_pos()\n",
     "    \n",
@@ -798,6 +811,8 @@
     "            #if released button, do action\n",
     "            if pygame.mouse.get_pressed()[0] == False:\n",
     "                clicked = False\n",
+    "                #get rid of game announcement text\n",
+    "                gameAnnouncementText = font.render(f\"  \", True, (0,0,0))\n",
     "                #roll twice\n",
     "                rolls = [roll.dice_roll(), roll.dice_roll()]  \n",
     "                print (rolls)\n",
