--- a/Game.ipynb
+++ b/Game.ipynb
@@ -433,6 +433,7 @@
     "        self.position = self.position + addValue;\n",
     "        if self.position > 40:\n",
     "            self.position = self.position - 40\n",
+    "            self.cash += 200\n",
     "        if self.position <1:\n",
     "            self.position = self.position + 40\n",
     "    \n",
@@ -516,22 +517,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3]\n",
+      "[5, 1]\n",
+      "['Oriental Avenue']\n",
+      "[2, 1]\n",
       "[]\n",
-      "[3, 6]\n",
-      "['Connecticut Avenue']\n",
+      "[1, 3]\n",
+      "['Oriental Avenue']\n",
+      "[1, 2]\n",
+      "[]\n",
+      "[3, 4]\n",
+      "['Oriental Avenue']\n",
+      "[2, 5]\n",
+      "['States Avenue']\n",
+      "[5, 1]\n",
+      "['Oriental Avenue', 'Indiana Avenue']\n",
       "[3, 2]\n",
-      "[]\n",
+      "['States Avenue', 'Tennessee Avenue']\n",
+      "[6, 4]\n",
+      "['Oriental Avenue', 'Indiana Avenue']\n",
+      "[4, 4]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue']\n",
+      "[5, 4]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad']\n",
+      "[2, 1]\n",
+      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue']\n",
+      "[4, 1]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad']\n",
+      "[3, 2]\n",
+      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue']\n",
+      "[1, 1]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad']\n",
+      "[1, 2]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad']\n",
+      "[2, 4]\n",
+      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue']\n",
       "[1, 3]\n",
-      "['Connecticut Avenue', 'States Avenue']\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad', 'Connecticut Avenue']\n",
+      "[5, 4]\n",
+      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue']\n",
+      "[4, 6]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad', 'Connecticut Avenue', 'New York Avenue']\n",
       "[5, 5]\n",
-      "['New York Avenue']\n",
-      "[3, 2]\n",
-      "['New York Avenue', 'Illinois Avenue']\n",
-      "[6, 3]\n",
-      "['Connecticut Avenue', 'States Avenue']\n",
-      "[5, 3]\n",
-      "['New York Avenue', 'Illinois Avenue', 'North Carolina Avenue']\n"
+      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue']\n",
+      "[1, 5]\n",
+      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue', 'Boardwalk']\n",
+      "[1, 2]\n",
+      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad', 'Connecticut Avenue', 'New York Avenue']\n"
      ]
     },
     {
@@ -770,7 +801,7 @@
     "                                player.properties.append(property_objects[player.position])\n",
     "                                property_objects.pop(player.position)\n",
     "                    #if auction button is hit(do nothing for now) \n",
-    "                    if 500 <= mousePos[0] <= 600 and 300 <= mousePos[1] <= 400: \n",
+    "                    if 450 <= mousePos[0] <= 550 and 300 <= mousePos[1] <= 400: \n",
     "                        if pygame.mouse.get_pressed()[0] == True:\n",
     "                               clickedAction = True\n",
     "                        if clickedAction:\n",
