--- a/Game.ipynb
+++ b/Game.ipynb
@@ -21,7 +21,8 @@
     "import pygame\n",
     "from pygame.locals import *\n",
     "import random\n",
-    " \n",
+    "import sys\n",
+    "\n",
     "pygame.init()\n",
     "vec = pygame.math.Vector2  # 2 for two dimensional\n",
     " \n",
@@ -39,7 +40,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d6aa3525-8a40-484c-9913-a03846d53587",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class dice(pygame.sprite.Sprite): \n",
@@ -79,6 +82,52 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "509bf39c-8585-448d-b84d-d0aa37ff277a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class PropertyButton(pygame.sprite.Sprite):\n",
+    "    def __init__(self, position):\n",
+    "        super().__init__()\n",
+    "        vertical_buttons = [1, 3, 5, 8, 9, 21, 23, 24, 26, 27, 29]\n",
+    "        if position in vertical_buttons:\n",
+    "            self.image = pygame.Surface((65, 105), pygame.SRCALPHA)\n",
+    "        else:\n",
+    "            self.image = pygame.Surface((105,65), pygame.SRCALPHA)\n",
+    "        self.image.fill((255, 255, 255, 100))\n",
+    "        \n",
+    "        self.position = position\n",
+    "        self.rect = self.image.get_rect(topleft=self.get_position(position))\n",
+    "\n",
+    "    def get_position(self, pos):\n",
+    "        # Define positions for different Monopoly properties\n",
+    "        property_positions = {1: (630, 694), 3: (499, 694), 6: (302, 696), 8: (173, 697), 9: (106, 695), \n",
+    "             11: (0, 631), 13: (0, 498), 14: (1, 433), 16: (0, 300), 18: (2, 172), 19: (2, 106),\n",
+    "             21: (105, 1), 23: (236, 1), 24: (301, 0), 26: (434, 1), 27: (497, 1), 29: (629, 0),\n",
+    "             31: (695, 105), 32: (694, 170), 34: (695, 300), 37: (695, 498), 39: (695, 629)}\n",
+    "        return property_positions[self.position]\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9324c2cf-0d58-4038-a3b3-c51c79e3def3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "property_numbers = [1, 3, 6, 8, 9, 11, 13, 14, 16, 18, 19, 21, 23, 24, 26, 27, 29, 31, 32, 34, 37, 39]\n",
+    "property_buttons = [PropertyButton(position) for position in property_numbers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "f95a40cd-9062-493e-bad3-7657f721c70e",
    "metadata": {
     "tags": []
@@ -127,16 +176,20 @@
     "    def get_hotels():\n",
     "        return self.hotel_count\n",
     "\n",
-    "    def get_rent_cost():\n",
-    "        return rent_costs[self.get_houses() + (5 * self.get_hotels())]\n",
+    "    def get_rent_cost(self):\n",
+    "        return self.rent_costs[self.house_count + (5 * self.hotel_count)]\n",
     "        \n",
     "        \n",
     "        \n",
     "class Railroad(Space):\n",
     "    def __init__(self, cost, *args, **kwargs):\n",
     "        self.cost = cost\n",
+    "        #is this a smart way of doing this? idk\n",
+    "        self.house_count = 0\n",
+    "        self.rent_costs = [25, 50, 100, 200]\n",
     "        super().__init__(*args, **kwargs)\n",
-    "        \n",
+    "    def get_rent_cost(self):\n",
+    "        return self.rent_costs[self.house_count]\n",
     "        \n",
     "class Utility(Property):\n",
     "    def __init__(self, *args, **kwargs):\n",
@@ -183,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "911641ee-024d-4507-a7dc-357fb33b2fde",
    "metadata": {
     "tags": []
@@ -221,9 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "791c454b-f293-448a-b39e-6f3d13c404a4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "chance_cards = [\"Advance to Go (Collect $200)\", \n",
@@ -268,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "aab42f38-057e-4380-b9c0-3f8812ede481",
    "metadata": {
     "tags": []
@@ -306,12 +361,29 @@
     "property_positions = list(property_objects.keys())\n",
     "\n",
     "chance_positions = [8, 23, 27]\n",
-    "community_chest_positions = [3, 18, 34]"
+    "community_chest_positions = [3, 18, 34]\n",
+    "\n",
+    "color_groups = {\n",
+    "    \"Brown\": [1, 3],\n",
+    "    \"Light Blue\": [6, 8, 9],\n",
+    "    \"Pink\": [11, 13, 14],\n",
+    "    \"Orange\": [16, 18, 19],\n",
+    "    \"Red\": [21, 23, 24],\n",
+    "    \"Yellow\": [26, 27, 29],\n",
+    "    \"Green\": [31, 32, 34],\n",
+    "    \"Dark Blue\": [37, 39]}\n",
+    "\n",
+    "def find_monopoly_set(property_positions):\n",
+    "    for color, positions in color_groups.items():\n",
+    "        if all(position in property_positions for position in positions):\n",
+    "            return [position for position in positions if position in property_positions]\n",
+    "\n",
+    "    return []\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "4b8758d5-555b-4a2c-8f5c-fe8a84fd89b5",
    "metadata": {
     "tags": []
@@ -381,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9da4a4a3-0d84-4d1d-bf0f-a4ba3d09c964",
    "metadata": {
     "tags": []
@@ -393,7 +465,7 @@
        "<rect(0, 0, 20, 20)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0435a73e-823d-47cf-baf5-b09d6302720e",
    "metadata": {
     "tags": []
@@ -507,8 +579,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5f90f228-20c8-4a54-8d8e-7a3f1e56522b",
+   "execution_count": 12,
+   "id": "98dcbcaf-6fbc-471b-92d7-4f3dd2de61e0",
    "metadata": {
     "tags": []
    },
@@ -517,52 +589,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 1]\n",
-      "['Oriental Avenue']\n",
-      "[2, 1]\n",
-      "[]\n",
-      "[1, 3]\n",
-      "['Oriental Avenue']\n",
-      "[1, 2]\n",
-      "[]\n",
-      "[3, 4]\n",
-      "['Oriental Avenue']\n",
-      "[2, 5]\n",
-      "['States Avenue']\n",
-      "[5, 1]\n",
-      "['Oriental Avenue', 'Indiana Avenue']\n",
-      "[3, 2]\n",
-      "['States Avenue', 'Tennessee Avenue']\n",
       "[6, 4]\n",
-      "['Oriental Avenue', 'Indiana Avenue']\n",
-      "[4, 4]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue']\n",
-      "[5, 4]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad']\n",
-      "[2, 1]\n",
-      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue']\n",
-      "[4, 1]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad']\n",
-      "[3, 2]\n",
-      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue']\n",
-      "[1, 1]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad']\n",
-      "[1, 2]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad']\n",
-      "[2, 4]\n",
-      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue']\n",
-      "[1, 3]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad', 'Connecticut Avenue']\n",
-      "[5, 4]\n",
-      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue']\n",
-      "[4, 6]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad', 'Connecticut Avenue', 'New York Avenue']\n",
+      "[]\n",
+      "[6, 1]\n",
+      "[]\n",
+      "[6, 3]\n",
+      "['New York Avenue']\n",
+      "[1, 4]\n",
+      "[]\n",
+      "[5, 6]\n",
+      "['New York Avenue']\n",
       "[5, 5]\n",
-      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue']\n",
+      "[]\n",
+      "[5, 4]\n",
+      "['Pacific Avenue']\n",
+      "[6, 6]\n",
+      "['New York Avenue']\n",
+      "[2, 1]\n",
+      "['Pacific Avenue', 'Pennsylvania Avenue']\n",
+      "[3, 4]\n",
+      "['New York Avenue']\n",
+      "[6, 3]\n",
+      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
+      "[6, 4]\n",
+      "['New York Avenue']\n",
+      "[1, 3]\n",
+      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
+      "[3, 1]\n",
+      "['New York Avenue', 'Virginia Avenue']\n",
+      "[3, 4]\n",
+      "paid 12 for rent\n",
+      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
+      "[3, 6]\n",
+      "['New York Avenue', 'Virginia Avenue', 'Indiana Avenue']\n",
       "[1, 5]\n",
-      "['Oriental Avenue', 'Indiana Avenue', 'Baltic Avenue', 'Vermont Avenue', 'Virginia Avenue', 'Boardwalk']\n",
-      "[1, 2]\n",
-      "['States Avenue', 'Tennessee Avenue', 'Atlantic Avenue', 'Short Line Railroad', 'Reading Railroad', 'Connecticut Avenue', 'New York Avenue']\n"
+      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
+      "[2, 3]\n",
+      "['New York Avenue', 'Virginia Avenue', 'Indiana Avenue']\n",
+      "[4, 2]\n",
+      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue', 'Atlantic Avenue']\n"
      ]
     },
     {
@@ -572,7 +637,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 251\u001b[0m\n\u001b[0;32m    248\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    249\u001b[0m \u001b[38;5;66;03m#add money info   \u001b[39;00m\n\u001b[1;32m--> 251\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmoneyText1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    252\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(moneyText2, text_rect2)\n\u001b[0;32m    253\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(gameAnnouncementText, gameAnnouncement_rect)\n",
+      "Cell \u001b[1;32mIn[12], line 301\u001b[0m\n\u001b[0;32m    298\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    299\u001b[0m \u001b[38;5;66;03m#add money info   \u001b[39;00m\n\u001b[1;32m--> 301\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmoneyText1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    302\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(moneyText2, text_rect2)\n\u001b[0;32m    303\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(gameAnnouncementText, gameAnnouncement_rect)\n",
       "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
@@ -763,7 +828,15 @@
     "                elif action == \"Your building loan matures. Collect $150\":\n",
     "                    player.cash += 150\n",
     "            \n",
-    "            #if landed in a property/railroad space(later to add utilties)\n",
+    "            #if landed in an unowned property/railroad space\n",
+    "            for p in players:\n",
+    "                if p != player.playerNumber:\n",
+    "                    for opponentProperty in p.properties:\n",
+    "                        if player.position == opponentProperty.position:\n",
+    "                            rentToPay = opponentProperty.get_rent_cost()\n",
+    "                            player.cash -= rentToPay\n",
+    "                            print(f\"paid {rentToPay} for rent\")\n",
+    "            #if landed in an unowned property/railroad space(later to add utilties)\n",
     "            if player.position in property_objects:\n",
     "                actionChosen = True\n",
     "                #show auction/buy buttons\n",
@@ -792,13 +865,15 @@
     "                                #remove button sprites\n",
     "                                all_sprites.remove(auctionButton)\n",
     "                                all_sprites.remove(buyButton)\n",
-    "\n",
     "                                player.cash -= property_objects[player.position].cost\n",
     "                                if player.playerNumber == 1:    \n",
     "                                    moneyText1 = font.render(f\"${player.cash}\", True, (0, 0, 0))\n",
     "                                elif player.playerNumber == 2:\n",
     "                                    moneyText2 = font.render(f\"${player.cash}\", True, (0, 0, 0))\n",
     "                                player.properties.append(property_objects[player.position])\n",
+    "                                railroadPositions = [6,16,26,36]\n",
+    "                                if player.position in railroadPositions:\n",
+    "                                     player.properties[-1].house_count += 1;\n",
     "                                property_objects.pop(player.position)\n",
     "                    #if auction button is hit(do nothing for now) \n",
     "                    if 450 <= mousePos[0] <= 550 and 300 <= mousePos[1] <= 400: \n",
@@ -811,10 +886,50 @@
     "                                #remove button sprites\n",
     "                                all_sprites.remove(auctionButton)\n",
     "                                all_sprites.remove(buyButton)\n",
-    "            \n",
-    "                \n",
-    "                \n",
+    "                  \n",
     "    all_sprites.add(roll)\n",
+    "    for entity in all_sprites:\n",
+    "        window.blit(entity.surf, entity.rect)\n",
+    "    pygame.display.update()\n",
+    "    waitToEndTurn = True\n",
+    "    endTurnClicked = False\n",
+    "    \n",
+    "    propertyPositionsList = []\n",
+    "    for prop in player.properties:\n",
+    "        propertyPositionsList.append(prop.position)\n",
+    "    set_of_monopolies = find_monopoly_set(propertyPositionsList)\n",
+    "    if set_of_monopolies:\n",
+    "        buttonsToDraw = []\n",
+    "        for b in property_buttons:\n",
+    "            if b.position in set_of_monopolies:\n",
+    "                all_sprites.add(b)\n",
+    "                buttonsToDraw.append(b)\n",
+    "        for entity in all_sprites:\n",
+    "            window.blit(entity.surf, entity.rect)\n",
+    "        pygame.display.update()\n",
+    "        \n",
+    "        while waitToEndTurn:\n",
+    "            mousePos = pygame.mouse.get_pos()\n",
+    "            event = pygame.event.wait()\n",
+    "            #if the x button is hit, quit\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                pygame.quit()\n",
+    "            \n",
+    "            #if clicked on buttons buy house/hotel\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "            if 200 <= mousePos[0] <= 400 and 450 <= mousePos[1] <= 550: \n",
+    "                if pygame.mouse.get_pressed()[0] == True:\n",
+    "                    endTurnClicked = True\n",
+    "                if endTurnClicked:\n",
+    "                    #if released button, do action\n",
+    "                    if pygame.mouse.get_pressed()[0] == False:\n",
+    "                        endTurnClicked = False\n",
+    "                        waitToEndTurn = False\n",
+    "        for i in range(len(buttonsToDraw)):\n",
+    "            all_sprites.remove(buttonsToDraw[i]\n",
     "\n",
     "#list of all player objects\n",
     "players = [P1,P2]\n",
